# hms

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pr.yml  rust.yml
app/: Cargo.toml
app/src/: main.rs
app/src/cli/: args.rs  mod.rs
app/src/gui/: gui.rs  mod.rs  term.rs  widgets.rs
app/src/gui/displays/: large.rs  large_display.rs  mod.rs  small.rs  utils.rs
app/src/gui/widgets/: snip_list.rs  snip_value.rs
cli/: Cargo.toml
cli/src/: app.rs  errors.rs  main.rs  prelude.rs
cli/src/commands/: add.rs  init.rs  main.rs  mod.rs
cli/src/gui/: gui.rs  layout.rs  mod.rs  state.rs  term.rs  widgets.rs
cli/src/gui/widgets/: gradient_text.rs  snip_display.rs  snip_list.rs
common/: Cargo.toml
common/src/: app_dir_client.rs  lib.rs
config/: Cargo.toml
config/src/: constants.rs  error.rs  lib.rs  manager.rs  models.rs  prelude.rs  wizard.rs
config/tests/: manager.rs  tests.rs
db/: .env.sample  Cargo.toml
db/migrations/2023-12-28-130611_create_snips/: down.sql  up.sql
db/src/: constants.rs  db.rs  error.rs  lib.rs  manager.rs  models.rs  prelude.rs  schema.rs
db/tests/: db.rs  manager.rs
hms/: Cargo.toml  build.rs
hms/src/: main.rs
hms/src/cli/: args.rs  display_mode.rs  mod.rs
hms/src/gui/: gui.rs  gui_state.rs  mod.rs  widgets.rs
hms/src/gui/displays/: large.rs  mod.rs  small.rs
hms/src/gui/traits/: gui_display.rs  mod.rs
hms/src/gui/widgets/: gradient_text.rs  search_bar.rs  snip_list.rs  snip_value.rs
hms/src/import/: csv.rs
hms/src/stats/: mod.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
