[workspace]
members = ["app", "cli", "common", "config", "db", "test_utils"]
resolver = "2"

[workspace.package]
authors = ["marcus.lindstrom1@gmail.com"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.79"
better-panic = "0.3.0"
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["cargo", "derive"] }
cli-clipboard = "0.4.0"
crossterm = "0.27.0"
dialoguer = "0.11.0"
diesel = { version = "2.1.4", features = [
    "chrono",
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
] }
diesel_migrations = "2.1.0"
dirs = "5.0.1"
ratatui = "0.25.0"
serde = { version = "1.0.193", features = ["derive"] }
tempfile = "3.8.1"
test-case = "3.3.1"
thiserror = "1.0.52"
toml = "0.8.8"

# Internal
hms-common = { path = "common" }
hms-config = { path = "config" }
hms-db = { path = "db" }
hms-test_utils = { path = "test_utils" }
