[workspace]
members  = ["common", "db", "hms", "test_utils"]
resolver = "2"

[workspace.package]
authors     = ["marcus.lindstrom1@gmail.com"]
description = "Command line utility to help with storing text (eg. code snips)"
edition     = "2021"
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/MackoHacko/hms"
version     = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
better-panic = "0.3.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["cargo", "derive"] }
cli-clipboard = "0.4.0"
crossterm = "0.28.1"
csv = "1.3.1"
dialoguer = "0.11.0"
diesel = { version = "2.2.6", features = [
    "chrono",
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
] }
diesel_migrations = "2.2.0"
dirs = "6.0.0"
human-panic = "2.0.2"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.15.0"
test-case = "3.3.1"
thiserror = "2.0.11"

# Internal
hms-common     = { path = "common", version = "0.1.0" }
hms-db         = { path = "db", version = "0.1.0" }
hms-test_utils = { path = "test_utils" }
