[package]
description = "Hold my Snip!\nA command line utility to hold all your snippets"
edition.workspace = true
name = "hms"
version.workspace = true

[dependencies]
anyhow.workspace = true
better-panic.workspace = true
clap.workspace = true
cli-clipboard.workspace = true
crossterm.workspace = true
dialoguer.workspace = true
ratatui.workspace = true
thiserror.workspace = true

# Internal
hms-common.workspace = true
hms-config.workspace = true
hms-db.workspace = true
