[package]
edition.workspace = true
name = "hms-config"
version.workspace = true

[dependencies]
dialoguer.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

# Internal
hms-common.workspace = true

[dev-dependencies]
hms-test_utils.workspace = true
tempfile.workspace = true
