[package]
edition.workspace = true
name = "hms-db"
version.workspace = true

[dependencies]
chrono.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
thiserror.workspace = true

# Internal
hms-common.workspace = true

[dev-dependencies]
hms-test_utils.workspace = true
tempfile.workspace = true
test-case.workspace = true
