[package]
authors.workspace    = true
description          = "Db lib for Hold my Snip!"
edition.workspace    = true
license.workspace    = true
name                 = "hms-db"
repository.workspace = true
version.workspace    = true

[dependencies]
chrono.workspace            = true
diesel.workspace            = true
diesel_migrations.workspace = true
thiserror.workspace         = true

# Internal
hms-common.workspace = true

[dev-dependencies]
hms-test_utils.workspace = true
tempfile.workspace       = true
test-case.workspace      = true
