[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
name                  = "hms"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[dependencies]
anyhow.workspace        = true
better-panic.workspace  = true
clap.workspace          = true
cli-clipboard.workspace = true
crossterm.workspace     = true
csv.workspace           = true
dialoguer.workspace     = true
human-panic.workspace   = true
ratatui.workspace       = true
serde.workspace         = true

# Internal
hms-common.workspace = true
hms-db.workspace     = true
